introduced configuration management added game types enum added game class and implementation for left4dead